--- a/sdv/real/generate-data-real.ipynb
+++ b/sdv/real/generate-data-real.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sdv\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -53,8 +52,8 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel(\n",
-    "    io='../../data/real/TLP_Identia.xlsx'\n",
-    "    )"
+    "    '../../data/real/TLP_Identia.xlsx'\n",
+    ")"
    ]
   },
   {
@@ -2815,7 +2814,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x16620599660>"
+       "<graphviz.graphs.Digraph at 0x19ff69f0e20>"
       ]
      },
      "execution_count": 13,
@@ -3103,7 +3102,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1662065d960>"
+       "<graphviz.graphs.Digraph at 0x19ff695cac0>"
       ]
      },
      "execution_count": 17,
@@ -3556,14 +3555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gen. (-3.50) | Discrim. (-0.73):  12%|█▏        | 118/1000 [00:39<04:58,  2.95it/s]"
+      "Gen. (-2.04) | Discrim. (1.77): 100%|██████████| 1000/1000 [05:07<00:00,  3.25it/s]\n"
      ]
     }
    ],
@@ -3573,7 +3572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3588,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3597,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3606,16 +3605,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(470, 213)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ctgan_synthetic_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3634,7 +3644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3652,7 +3662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3661,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3670,16 +3680,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: -232.440: 100%|██████████| 1000/1000 [03:09<00:00,  5.28it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "tvaes_synthesizer.fit_processed_data(processed_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3694,7 +3712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3703,7 +3721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3712,16 +3730,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(470, 213)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tvaes_synthetic_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3747,9 +3776,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2912.64it/s]|\n",
+      "Data Validity Score: 98.78%\n",
+      "\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 105.84it/s]|\n",
+      "Data Structure Score: 100.0%\n",
+      "\n",
+      "Overall Score (Average): 99.39%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sdv.evaluation.single_table import run_diagnostic\n",
     "\n",
@@ -3762,9 +3808,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1268.74it/s]|\n",
+      "Column Shapes Score: 92.9%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:46<00:00, 211.04it/s]|\n",
+      "Column Pair Trends Score: 90.64%\n",
+      "\n",
+      "Overall Score (Average): 91.77%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sdv.evaluation.single_table import evaluate_quality\n",
     "\n",
@@ -3777,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3787,7 +3850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3796,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3822,9 +3885,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 1994.87it/s]|\n",
+      "Data Validity Score: 98.49%\n",
+      "\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 516.86it/s]|\n",
+      "Data Structure Score: 100.0%\n",
+      "\n",
+      "Overall Score (Average): 99.24%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ctgan_diagnostic = run_diagnostic(\n",
     "    real_data=df,\n",
@@ -3835,9 +3915,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 894.42it/s]| \n",
+      "Column Shapes Score: 92.68%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [02:01<00:00, 186.12it/s]|\n",
+      "Column Pair Trends Score: 84.05%\n",
+      "\n",
+      "Overall Score (Average): 88.37%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ctgan_quality_report = evaluate_quality(\n",
     "    df,\n",
@@ -3848,7 +3945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,7 +3955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3890,9 +3987,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 1822.21it/s]|\n",
+      "Data Validity Score: 99.56%\n",
+      "\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<?, ?it/s]|\n",
+      "Data Structure Score: 100.0%\n",
+      "\n",
+      "Overall Score (Average): 99.78%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tvaes_diagnostic = run_diagnostic(\n",
     "    real_data=df,\n",
@@ -3903,9 +4017,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating report ...\n",
+      "\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1257.78it/s]|\n",
+      "Column Shapes Score: 92.29%\n",
+      "\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:46<00:00, 211.04it/s]|\n",
+      "Column Pair Trends Score: 91.44%\n",
+      "\n",
+      "Overall Score (Average): 91.87%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tvaes_quality_report = evaluate_quality(\n",
     "    df,\n",
@@ -3916,7 +4047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3926,7 +4057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3935,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
