--- a/sdv/tlp/generate-data.ipynb
+++ b/sdv/tlp/generate-data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel(\n",
-    "    '../../data/real/TLP_Identia.xlsx'\n",
+    "    '../../data/tlp/TLP_Identia.xlsx'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2245,7 @@
        "4                                0.498705  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2256,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2541,7 +2541,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2814,10 +2814,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x19ff69f0e20>"
+       "<graphviz.graphs.Digraph at 0x19150525e40>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2829,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2859,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3102,10 +3102,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x19ff695cac0>"
+       "<graphviz.graphs.Digraph at 0x191777d9480>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3116,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3179,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3200,7 +3200,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3211,7 +3211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3221,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3236,7 +3236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3245,7 +3245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3254,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3263,7 +3263,7 @@
        "(470, 213)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3274,12 +3274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "gc_synthetic_data.to_csv(\n",
-    "    '../../data/real/real-gc.csv',\n",
+    "    '../../data/tlp/synthetic-gc.csv',\n",
     "    index=False\n",
     ")"
    ]
@@ -3293,7 +3293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3312,7 +3312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3321,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3555,14 +3555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gen. (-2.04) | Discrim. (1.77): 100%|██████████| 1000/1000 [05:07<00:00,  3.25it/s]\n"
+      "Gen. (-4.92) | Discrim. (-1.15): 100%|██████████| 1000/1000 [05:41<00:00,  2.93it/s]\n"
      ]
     }
    ],
@@ -3572,7 +3572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3587,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3596,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3605,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3614,7 +3614,7 @@
        "(470, 213)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3625,12 +3625,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "ctgan_synthetic_data.to_csv(\n",
-    "    '../../data/real/real-ctgan.csv',\n",
+    "    '../../data/tlp/synthetic-ctgan.csv',\n",
     "    index=False\n",
     ")"
    ]
@@ -3644,7 +3644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3662,7 +3662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3671,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3680,14 +3680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: -232.440: 100%|██████████| 1000/1000 [03:09<00:00,  5.28it/s]\n"
+      "Loss: -282.760: 100%|██████████| 1000/1000 [02:46<00:00,  6.00it/s]\n"
      ]
     }
    ],
@@ -3697,7 +3697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3712,7 +3712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3721,7 +3721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3730,7 +3730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3739,7 +3739,7 @@
        "(470, 213)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3750,12 +3750,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "tvaes_synthetic_data.to_csv(\n",
-    "    '../../data/real/real-tvaes.csv',\n",
+    "    '../../data/tlp/synthetic-tvaes.csv',\n",
     "    index=False\n",
     ")"
    ]
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3785,13 +3785,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2912.64it/s]|\n",
-      "Data Validity Score: 98.78%\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2448.38it/s]|\n",
+      "Data Validity Score: 98.81%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 105.84it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<?, ?it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 99.39%\n",
+      "Overall Score (Average): 99.41%\n",
       "\n"
      ]
     }
@@ -3808,7 +3808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3817,13 +3817,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1268.74it/s]|\n",
-      "Column Shapes Score: 92.9%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1163.64it/s]|\n",
+      "Column Shapes Score: 92.56%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:46<00:00, 211.04it/s]|\n",
-      "Column Pair Trends Score: 90.64%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:30<00:00, 248.45it/s]|\n",
+      "Column Pair Trends Score: 90.69%\n",
       "\n",
-      "Overall Score (Average): 91.77%\n",
+      "Overall Score (Average): 91.62%\n",
       "\n"
      ]
     }
@@ -3840,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3850,7 +3850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3859,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3885,7 +3885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3894,13 +3894,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 1994.87it/s]|\n",
-      "Data Validity Score: 98.49%\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2468.77it/s]|\n",
+      "Data Validity Score: 98.29%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 516.86it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 248.01it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 99.24%\n",
+      "Overall Score (Average): 99.14%\n",
       "\n"
      ]
     }
@@ -3915,7 +3915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3924,13 +3924,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 894.42it/s]| \n",
-      "Column Shapes Score: 92.68%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1520.21it/s]|\n",
+      "Column Shapes Score: 93.23%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [02:01<00:00, 186.12it/s]|\n",
-      "Column Pair Trends Score: 84.05%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:33<00:00, 240.92it/s]|\n",
+      "Column Pair Trends Score: 83.57%\n",
       "\n",
-      "Overall Score (Average): 88.37%\n",
+      "Overall Score (Average): 88.4%\n",
       "\n"
      ]
     }
@@ -3945,7 +3945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3955,7 +3955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3964,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3987,7 +3987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3996,13 +3996,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 1822.21it/s]|\n",
-      "Data Validity Score: 99.56%\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2259.26it/s]|\n",
+      "Data Validity Score: 99.64%\n",
       "\n",
       "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<?, ?it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 99.78%\n",
+      "Overall Score (Average): 99.82%\n",
       "\n"
      ]
     }
@@ -4017,7 +4017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4026,13 +4026,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1257.78it/s]|\n",
-      "Column Shapes Score: 92.29%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 900.67it/s]|\n",
+      "Column Shapes Score: 93.05%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:46<00:00, 211.04it/s]|\n",
-      "Column Pair Trends Score: 91.44%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:29<00:00, 253.35it/s]|\n",
+      "Column Pair Trends Score: 92.19%\n",
       "\n",
-      "Overall Score (Average): 91.87%\n",
+      "Overall Score (Average): 92.62%\n",
       "\n"
      ]
     }
@@ -4047,7 +4047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4057,7 +4057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4066,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
